[gd_scene load_steps=2 format=3 uid="uid://e0xy1z2a3b4c5"]

[ext_resource type="Script" path="res://src/side/CaseSelection.gd" id="1_case_sel"]

[node name="CaseSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_case_sel")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select a Case"
horizontal_alignment = 1

[node name="CaseList" type="ItemList" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionPanel" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionText" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer/DescriptionPanel"]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="ButtonPanel" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonPanel"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Play Case"

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"
